--- a/docs/research/ref.bib
+++ b/docs/research/ref.bib
@@ -1,20 +1,21 @@
-// ----------------------------------------------------------------------------
-// Equalization and Semantic Audio
-// ---------------------------------------------------------------------------
+% ----------------------------------------------------------------------------
+% Equalization and Semantic Audio
+% ---------------------------------------------------------------------------
 
-// Intro of SAFE plugins
+% Intro of SAFE plugins
 @inproceedings{safe2014,
      title = {{SAFE}: A system for the extraction and retrieval of semantic audio descriptors},
     author = {Stables, R. and Enderby, S. and De Man, B. and Fazekas, G. and Reiss, J. D.},
  booktitle = {The International Society of Music Information Retrieval (ISMIR2014)},
+       url = {https://www.eecs.qmul.ac.uk/~josh/documents/2014/Stables%20et%20al%20ISMIR2014.pdf},
       year = {2014},
 }
 
-// SAFE Plugins
-// Analysis of the words used across all plugins and how they are related to each other
+% SAFE Plugins
+% Analysis of the words used across all plugins and how they are related to each other
 @inproceedings{stables_semantic,
-	  author = {Stables, Ryan and De Man, Brecht and Enderby, Sean and Reiss, Joshua D. and Fazekas, Gy\"{o}rgy and Wilmering, Thomas},
- 	  title  = {Semantic Description of Timbral Transformations in Music Production},
+         author = {Stables, Ryan and De Man, Brecht and Enderby, Sean and Reiss, Joshua D. and Fazekas, Gy\"{o}rgy and Wilmering, Thomas},
+          title  = {Semantic Description of Timbral Transformations in Music Production},
  booktitle = {Proceedings of the 24th ACM International Conference on Multimedia},
     series = {MM '16},
       year = {2016},
@@ -30,8 +31,8 @@
   keywords = {dimensionality reduction, hierarchical clustering, music production, semantic audio, timbre},
 } 
 
-// Dimensionality reduction using an autoencoder on EQ curves
-// Simple autoencoder to build JUCE plugin that allows for 2D space of plugin params
+% Dimensionality reduction using an autoencoder on EQ curves
+% Simple autoencoder to build JUCE plugin that allows for 2D space of plugin params
 @Article{stasis_reduce_dimension,
     author = {Stasis, Spyridon and Stables, Ryan and Hockman, Jason},
      title = {Semantically Controlled Adaptive Equalisation in Reduced Dimensionality Parameter Space},
@@ -44,38 +45,40 @@
        doi = {10.3390/app6040116}
 }
 
-// Examining semantic descriptors for a graphic equalizer with 40 (ERB) frequency bands
-// Croward sourced data collection via online interface with about 700 samples
+% Examining semantic descriptors for a graphic equalizer with 40 (ERB) frequency bands
+% Croward sourced data collection via online interface with about 700 samples
 @inproceedings{cartwright_socialeq,
      title = {SocialEQ: Crowdsourcing an Equalization Descriptor Map},
     author = {M. Cartwright and Pardo, Bryan A.},
       year = {2013},
   language = {English},
  booktitle = {Proceedings of the International Society of Music Information Retrieval Conference},
+       url = {https://pdfs.semanticscholar.org/62d2/1b75b63b8ebed80701854af36143ca939dcf.pdf},
 }
 
-// ----------------------------------------------------------------------------
-// Variational Autoencoders
-// ----------------------------------------------------------------------------
+% ----------------------------------------------------------------------------
+% Variational Autoencoders
+% ----------------------------------------------------------------------------
 
-// More insights into beta-VAE and training
-// Trick to change the beta value over training
+% More insights into β-VAE and training
+% Trick to change the β value over training
 @article{burgess_betavae,
-    title = {Understanding disentangling in $$\backslash$beta $-VAE},
+    title = {Understanding disentangling in β-VAE},
    author = {Burgess, Christopher P and Higgins, Irina and Pal, Arka and Matthey, Loic and Watters, Nick and Desjardins, Guillaume and Lerchner, Alexander},
   journal = {arXiv preprint arXiv:1804.03599},
-     year = {2018}
+     year = {2018},
+     url  = {https://arxiv.org/abs/1804.03599}
 }
 
-// Introduction of beta-VAE concept
-// Lots applications and visual examples
+% Introduction of β-VAE concept
+% Lots applications and visual examples
 @article{higgins_betavae,
-    title = {$$\backslash$beta $-VAE: Learning Basic Visual Concepts with a Constrained Variational Framework.},
+    title = {β-VAE: Learning Basic Visual Concepts with a Constrained Variational Framework.},
    author = {Higgins, Irina and Matthey, Loic and Pal, Arka and Burgess, Christopher and Glorot, Xavier and Botvinick, Matthew and Mohamed, Shakir and Lerchner, Alexander},
   journal = {ICLR},
    volume = {2},
    number = {5},
     pages = {6},
-     year = {2017}
+     year = {2017},
+     url  = {https://openreview.net/forum?id=Sy2fzU9gl}
 }
-
