--- a/docs/articles/ismir/ISMIRlbd.tex
+++ b/docs/articles/ismir/ISMIRlbd.tex
@@ -10,7 +10,7 @@
 \usepackage{color}
 \usepackage{amsfonts}
 
-\title{\MakeLowercase{flow}EQ: A smarter equalizer plugin using a disentangled variational autoencoder}
+\title{\MakeLowercase{flow}EQ: A smarter equalizer plugin using a $\beta$-VAE}
 
 
 % Note: Please do NOT use \thanks or a \footnote in any of the author markup
@@ -47,53 +47,76 @@
 
 % [ main abstract ]
 
-We present \textbf{flowEQ}, an intelligent interface for a five-band parametric equalizer plugin. \textbf{flowEQ} enables the audio engineer to control the all thirteen parameters of the equalizer using either one, two, or three knobs (a user-controllable parameter). This is achieved by learning low dimensional mappings from 1, 2, and 3 dimensional latent spaces to the thirteen dimensional parameter space of the equalizer with the use of a variational autoencoder. Additionally, different levels of latent space disentanglement are investigated providing the user with the ability to adjust the latent representations directly within the plugin. By traversing the latent spaces of the trained models, the user can quickly search through relevant configurations of the equalizer. This methodology promotes using one’s ears to determine the proper EQ settings and enables both novice and experienced audio engineers to more efficiently apply timbral processing in the post-production process.
+We present \textbf{flowEQ}, an intelligent interface for a five-band parametric equalizer plugin. 
+This tool enables the audio engineer to control the all thirteen parameters of the equalizer using either one, two, or three sliders. 
+This is achieved by learning low dimensional mappings from one, two, and three dimensional latent spaces to the thirteen dimensional parameter space of the equalizer. 
+We use a disentangled variational autoencoder ($\beta$-VAE) trained on a dataset of equalizer configurations collected from audio engineers. 
+Different levels of latent space disentanglement are investigated, providing the user with the ability to adjust the latent representations directly within the plugin. 
+By traversing the latent spaces of the trained models, the user can quickly search through relevant configurations of the equalizer. 
+This enables both novice and experienced audio engineers to more efficiently apply timbral processing during post-production.
 
 % [ plugin screenshot ]
 
 \begin{figure}[H]
   \centerline{
-  \includegraphics[width=0.6\columnwidth]{../../img/full_visual.png}}
+  \includegraphics[width=0.5\columnwidth]{../../img/full_visual.png}}
   \caption{VST plugin running in REAPER with real-time MATLAB visualization tool.}
   \label{fig:plugin}
  \end{figure}
 
 % [ introduction ]
 
-The parametric equalizer is the de-facto tool used by audio engineers to shape the timbral content of an audio signal. First introduced with analog circuitry in the early 1970s \cite{massenburg}, these processors have evolved with the advent of digital signal processing and are readily available as plugins or standalone outboard processors.  is one of the most powerful forms of the equalizer, since it provides direct control over the gain, center frequency, as well as the bandwidth (known as the Q factor) for each band. Most parametric equalizers feature multiple bands, allowing extensive control over the processor’s transfer function. 
-
-Due to the increased complexity of the parametric equalizer in comparison to other forms of equalizers, such as bass and treble controls or graphic equalizers, additional experience is required on the part of the audio engineer in order to achieve the desired timbral effect. The goal of \textbf{flowEQ} is to provide a simplified interface with embedded information on relevant configurations of the equalizer. 
+The parametric equalizer is the de-facto tool used by audio engineers to shape the timbre of an audio signal. 
+First employed with analog circuitry in the early 1970s \cite{massenburg}, these processors have evolved with the advent of digital signal processing, and are readily available as plugins or standalone outboard processors. 
+Providing direct control over the gain, center frequency, and bandwidth (known as Q factor) for each band, the parametric equalizer is one of the most powerful forms of the equalizer. 
+Due to this increased complexity, experience is required on the part of the audio engineer in order to achieve the desired timbral effect. 
+Our goal is to provide a simplified interface to efficiently search across relevant configurations of the equalizer without extensive experience. 
 
 % [ previous work ]
 
-Previous work has investigated the use of timbral semantics for the intelligent control of different equalizers. In \cite{cartwright_socialeq}, the authors use crowdsourced data to uncover universal, semantic descriptors of timbre with the goal of designing an equalizer that can respond to descriptive language directly. 
+Previous work has investigated the use of timbral semantics for the intelligent control of equalizers. 
+In \cite{cartwright_socialeq}, the authors collect and analyze crowdsourced data to uncover universal, semantic descriptors of timbre, with the goal of designing an equalizer that can respond to descriptive language. 
+The SAFE project plugins \cite{safe2014}, which include a compressor, distortion, reverb, and a parametric equalizer, provide a means to collect semantic user data directly from the normal workflow of audio engineers. 
+The work presented in \cite{stasis_reduce_dimension} is the most similar to ours. 
+They use data from the SAFE project and employ a number of classical dimensionality reduction techniques to build a model that attempts to control the ‘warmth’ and ‘brightness’ of an equalizer. 
 
-The SAFE project plugins \cite{safe2014}, which include a compressor, distortion, reverb, and a parametric equalizer, provide a means to collect semantic user data directly from the normal workflow of audio engineers. The work presented in \cite{stasis_reduce_dimension} is the most similar to \textbf{flowEQ}, and attempts to use data from the SAFE equalizer to build a two dimensional model for controlling the ‘warmth’ and ‘brightness’ of the timbral transformation. Different methods of dimensionality reduction are investigated along with a vanilla autoencoder structure. While these semantic interfaces present potentially promising results in the control of an equalizer, they are inherently limited by the generalization and relative specificity of the semantic descriptors studied. \textbf{flowEQ} both improves and expands upon this work by employing a more modern and powerful model, the variational autoencoder, along with the investigation of variable latent space dimensionality and disentanglement. 
+While these semantic interfaces present potentially promising results in the control of an equalizer, they are inherently limited by the generalization and relative specificity of the semantic descriptors studied. 
+\textbf{flowEQ} both improves and expands upon this work by employing a more modern and powerful model, the variational autoencoder, along with the investigation of variable latent space dimensionality and disentanglement. 
 
 % [ method ]
 
-We use the VAE formulation originally presented in \cite{vae} where we attempt to jointly learn the parameters, $\phi$ and $\theta$, of the probabilistic encoder, $q_\phi(\mathbf{x}|\mathbf{z})$, and the generative model $p_\theta(\mathbf{z}|\mathbf{x})$.
-
-During optimization we minimize the expected negative log-likelihood for the data generated by the decoder, $p_\phi(x_i|z)$, after sampling a latent code from the encoder, $z \sim q_{\theta}(z|x_i)$. 
-This acts as a reconstruction loss, incentivising the model to accurately encoder and decode the inputs. An additional regularization term is included, the KL divergence,  incentives the model to the encode inputs similarly to the isotropic multivariate Gaussian, $p_\theta(\mathbf{z}) = \mathcal{N}(\mathbf{z};0,\mathbf{I})$.
-
-Equation \ref{eq:loss} shows the loss function used, with the addition of a hyperparameter $\beta$, known as the disentanglement factor \cite{higgins_betavae}. 
-
+We use the VAE formulation originally presented in \cite{vae}, where we attempt to jointly learn the parameters, $\phi$ and $\theta$, of a probabilistic encoder, $q_\phi(\mathbf{x}|\mathbf{z})$, and a generative decoder, $p_\theta(\mathbf{z}|\mathbf{x})$.
+During optimization we minimize the expected negative log-likelihood for the data generated by the decoder, after sampling a latent code from the encoder. 
+This acts as a reconstruction loss, incentivising the model to accurately encoder and decode the inputs. An additional regularization term, the KL divergence, 
+incentives the model to the encode inputs similarly to the isotropic multivariate Gaussian, $p_\theta(\mathbf{z}) = \mathcal{N}(\mathbf{z};0,\mathbf{I})$.
 
 \begin{equation}
   \mathcal{L}(\pmb{\theta},\pmb{\phi},\mathbf{x}^{(i)}) = - \mathbb{E}_{\mathbf{z} \sim q_{\theta}(\mathbf{z}|\mathbf{x}^{(i)})} [ {\log{p_\phi(\mathbf{x}^{(i)} | \mathbf{z})}} ] + \mathbf{\beta} \: D_{KL} (q_\theta(\mathbf{z} | \mathbf{x}^{(i)}) || p_\theta(\mathbf{z})).
   \label{eq:loss}
 \end{equation}
 
+Equation \ref{eq:loss} shows the loss function, with the addition of a hyperparameter, $\beta$, known as the disentanglement factor \cite{higgins_betavae}. 
+Adjusting $\beta$, the relative weight of the reconstruction and KL loss, allows us to investigate different levels of latent space disentanglement.
+We train a total of twelve different models with three different latent space bottlenecks (1D, 2D, and 3D), each with one of four different values of $\beta$.
+
 % [ implementation ] 
 
-The plugin is implemented with the MATLAB Audio Toolbox \footnote{https://www.mathworks.com/products/audio.html}, which provides an API for compiling MATLAB code directly to VST/AU plugins to be executed in a host, most commonly DAWs. Compiled plugins for macOS and Windows are made available on the project website\footnote{https://flowEQ.ml/}. Three modes of operation are features: Traverse, Semantic, and Manual. 
-Traverse mode allows the user to directly sample from the latent space of the selected model. This utilizes either 1, 2, or 3 sliders on the UI based upon the dimensionality of the selected model. In semantic mode the descriptor labels are used to build a linear model in each of the latent space spaces. Pre-computed semantic embeddings are provided and the user has the ability to interpolate between two different selected embeddings within the latent space. Finally, Manual mode allows the user to directly control each of the parameters in the equalizer.  
+The plugin is implemented with the MATLAB Audio Toolbox\footnote{https://www.mathworks.com/products/audio.html}, which provides an API for compiling MATLAB code directly to VST/AU plugins to be executed in a host, most commonly DAWs. 
+Compiled plugins for macOS and Windows are made available on the project website\footnote{https://flowEQ.ml/}, as well as the source code\footnote{https://github.com/csteinmetz1/flowEQ}. 
+Three modes of operation are featured in the plugin.
+\emph{Traverse} mode allows the user to directly sample from the latent space of the selected model. 
+The user can select among the twelve models to investigate different levels of latent space dimensionality and disentanglement. 
+In \emph{semantic} mode, semantic descriptor labels are used to build a linear model in each latent space space to classify 'warmth' and 'brightness'. 
+Pre-computed semantic embeddings are provided and the user has the ability to interpolate between two different selected embeddings. 
+Finally, Manual mode allows the user to directly control each of the parameters in the equalizer.  
 
 % [ conclusion ]
 
-\textbf{flowEQ} provides an intelligent modality for interfacing with the parameter space of the five band parametric equalizer. The user additionally has control over the latent space representations used during the transformation, with direct control over the dimensionality and disentanglement present.
-
+\textbf{flowEQ} provides an intelligent modality for interfacing with the parameter space of a five-band parametric equalizer. 
+By employing a $\beta$-VAE, we build a number of latent variable models.
+A real-time audio plugin provides audio engineers with the ability to directly interface with these models.
+By selecting among the models, the user can adjust the latent space representation, with control over dimensionality and disentanglement.
+This tool provides a simplified interface to efficiently search across relevant configurations of the equalizer, allowing for greater efficiency in searching among timbral transformations. 
 
 %\begin{table}[h]
 %  \label{sample-table}
@@ -110,9 +133,6 @@ Traverse mode allows the user to directly sample from the latent space of the se
 %  \label{tab:example}
 %  \end{center}
 %\end{table}
-
-% [ conclusion ]
-
 
 \end{abstract}
 
