update some details in the bib for correct render on the webpage

--- a/docs/research/ref.bib
+++ b/docs/research/ref.bib
@@ -5,7 +5,7 @@
 @conference{massenburg,
      title = {Parametric Equalization},
     author = {Massenburg, George},
- booktitle = {Audio Engineering Society Convention 42},
+   journal = {Audio Engineering Society Convention 42},
      month = {May},
       year = {1972},
        url = {http://www.aes.org/e-lib/browse.cfm?elib=16171}
@@ -15,7 +15,7 @@
 @inproceedings{safe2014,
      title = {{SAFE}: A system for the extraction and retrieval of semantic audio descriptors},
     author = {Stables, R. and Enderby, S. and De Man, B. and Fazekas, G. and Reiss, J. D.},
- booktitle = {The International Society of Music Information Retrieval (ISMIR2014)},
+   journal = {The International Society of Music Information Retrieval (ISMIR2014)},
        url = {https://www.eecs.qmul.ac.uk/~josh/documents/2014/Stables%20et%20al%20ISMIR2014.pdf},
       year = {2014},
 }
@@ -25,7 +25,7 @@
 @inproceedings{stables_semantic,
     author = {Stables, Ryan and De Man, Brecht and Enderby, Sean and Reiss, Joshua D. and Fazekas, György and Wilmering, Thomas},
     title  = {Semantic Description of Timbral Transformations in Music Production},
- booktitle = {Proceedings of the 24th ACM International Conference on Multimedia},
+  journal  = {Proceedings of the 24th ACM International Conference on Multimedia},
     series = {MM '16},
       year = {2016},
       isbn = {978-1-4503-3603-1},
@@ -61,7 +61,7 @@
     author = {M. Cartwright and Pardo, Bryan A.},
       year = {2013},
   language = {English},
- booktitle = {Proceedings of the International Society of Music Information Retrieval Conference},
+   journal = {Proceedings of the International Society of Music Information Retrieval Conference},
        url = {https://pdfs.semanticscholar.org/62d2/1b75b63b8ebed80701854af36143ca939dcf.pdf},
 }
 
@@ -71,7 +71,7 @@
 
 % Foundational VAE paper
 @article{vae,
-       author = {{Kingma}, Diederik P and {Welling}, Max},
+       author = {Kingma, Diederik P and Welling, Max},
         title = "{Auto-Encoding Variational Bayes}",
       journal = {arXiv e-prints},
      keywords = {Statistics - Machine Learning, Computer Science - Machine Learning},
@@ -82,7 +82,7 @@
 archivePrefix = {arXiv},
        eprint = {1312.6114},
  primaryClass = {stat.ML},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2013arXiv1312.6114K},
+          url = {https://ui.adsabs.harvard.edu/abs/2013arXiv1312.6114K},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
